<resources>
    <string name="app_name">platformbaseddevelopment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login\n</string>
    <string name="click_to_register">Click to Register\n</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>